# torch-darktable

./: .gitignore  MANIFEST.in  README.md  __init__.py  laplacian.py  pixi.toml  ppg_cuda.cpp  ppg_demosaic.py  ppg_kernels.cu  pyproject.toml  ruff.toml  setup.py  test_debayer.py  test_laplacian.py  test_ppg.py
cuda_demosaic/: __init__.py  demosaic.py
cuda_demosaic/csrc/: demosaic.cpp  postprocess_kernels.cu  ppg_kernels.cu  rcd_kernels.cu
torch_darktable/: __init__.py  bayer.py  color_conversion.py  debayer.py  denoise.py  extension.py  jpeg.py  local_contrast.py  tonemap.py  torch_darktable_extension.pyi  utilities.py  white_balance.py
torch_darktable/camera_settings/: artichoke.json  beetroot.json  carrot.json  pfr.json
torch_darktable/csrc/: bilateral.cu  bilateral.h  color_conversions.cu  color_conversions.h  cuda_utils.h  demosaic.h  denoise.cu  denoise.h  device_color_conversions.h  device_conversions.h  device_math.h  extension.cpp  fft.h  jpeg_encoder.cu  laplacian.cu  laplacian.h  packed.cu  packed.h  postprocess_kernels.cu  ppg_kernels.cu  rcd_kernels.cu  reduction.h  white_balance.cu
torch_darktable/csrc/debayer/: amaze.cu  amaze.h  bayer_device.h  bilinear.cu  demosaic.h  postprocess.cu  ppg.cu  rcd.cu
torch_darktable/csrc/denoise/: denoise.cu  denoise.h  fft.h  pixel.h  window.h
torch_darktable/csrc/fft/: common.h  fft_coop.h  fft_thread.h
torch_darktable/csrc/local_contrast/: bilateral.cu  bilateral.h  laplacian.cu  laplacian.h
torch_darktable/csrc/tonemap/: aces.cu  color_adaption.cu  color_adaption.h  linear.cu  reinhard.cu  tonemap.h
torch_darktable/pipeline/: camera_settings.py  config.py  image_processor.py  presets.py  transform.py  util.py
torch_darktable/scripts/: __init__.py  bayer_utils.py  benchmark_debayer.py  dump_camera_settings.py  pipeline.py  process_interactive.py  process_raw.py  raw_image.py  run_benchmark.py  test_bilateral.py  test_debayer.py  test_jpeg.py  test_laplacian.py  test_lens.py  test_wiener.py  util.py
torch_darktable/scripts/process_raw/: __init__.py  depth_estimation.py  display_layer.py  display_pipeline.py  histogram_display.py  histogram_ui.py  histogram_window.py  jpeg_preview_window.py  jpeg_utils.py  main.py  pipeline_ui.py  ui.py  ui_builder.py
torch_darktable/scripts/view_raw/: histogram_display.py  histogram_ui.py  histogram_window.py  jpeg_preview_window.py  jpeg_utils.py  main.py  pipeline_ui.py  ui.py  ui_builder.py
torch_darktable/tests/: test_camera_settings_serialization.py
torch_darktable_cuda/: CMakeLists.txt  pixi.toml
torch_darktable_cuda/src/: color_conversions.cu  color_conversions.h  cuda_utils.h  device_conversions.h  extension.cpp  jpeg_encoder.h  packed.cu  packed.h  reduction.h  white_balance.cu  white_balance.h
torch_darktable_cuda/src/debayer/: bayer_device.h  bilinear.cu  postprocess.cu  rcd.cu
torch_darktable_cuda/src/denoise/: denoise.cu  denoise.h  window.h
torch_darktable_cuda/src/local_contrast/: bilateral.cu  laplacian.cu
torch_darktable_cuda/src/tonemap/: aces.cu  color_adaption.cu  reinhard.cu
