[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch_darktable"
version = "0.1.1"
description = "CUDA ISP algorithms extracted from darktable for PyTorch"
authors = [{name = "Oliver Batchelor"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "numpy>=2.2.0",
    "pillow",
]

[project.scripts]
test-debayer = "torch_darktable.scripts.test_debayer:main"
test-laplacian = "torch_darktable.scripts.test_laplacian:main"
test-bilateral = "torch_darktable.scripts.test_bilateral:main"
test-wiener = "torch_darktable.scripts.test_wiener:main"
test-denoise = "torch_darktable.scripts.test_wiener:main"
run-benchmark = "torch_darktable.scripts.run_benchmark:main"
process-raw = "torch_darktable.scripts.process_raw:main"


