[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_darktable"
version = "0.2.3"
description = "CUDA ISP algorithms extracted from darktable for PyTorch"
authors = [{name = "Oliver Batchelor"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "numpy",
    "pillow",
    "beartype",
    "pydantic"
]

[project.scripts]
test-debayer = "torch_darktable.scripts.test_debayer:main"
test-laplacian = "torch_darktable.scripts.test_laplacian:main"
test-bilateral = "torch_darktable.scripts.test_bilateral:main"
test-wiener = "torch_darktable.scripts.test_wiener:main"
test-denoise = "torch_darktable.scripts.test_wiener:main"
test-jpeg = "torch_darktable.scripts.test_jpeg:main"
run-benchmark = "torch_darktable.scripts.run_benchmark:main"
view-raw = "torch_darktable.scripts.view_raw.main:main"
dump-camera-settings = "torch_darktable.scripts.dump_camera_settings:main"

[tool.setuptools.packages.find]
include = ["torch_darktable*"]

